# rlmc

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml  setup.py
examples/: segmantic_segmentation.py
rlmc/: __init__.py
rlmc/configs/: __init__.py  cfg.yaml  common_urls.yaml  script_paths.yaml  user_setting.yaml
rlmc/configs/trainval/: trainval.yaml
rlmc/data/: __init__.py  dataloader_example.py  semantic_segmentation.py  utils.py
rlmc/eval/: metrics.py
rlmc/fileop/: __init__.py  abstract_file.py  json_op.py  mat_op.py  numpy_op.py  pickle_op.py  tensorflow_ckpt.py  utils.py  video_op.py  yaml_op.py
rlmc/model/: __init__.py  predictor.py
rlmc/model/cv/: semantic_segmentation.py  timm_models_example.py
rlmc/resource/: .condarc  __init__.py  condarc.txt  cudarc.txt  pip.ini
rlmc/trainer/: __init__.py  loss.py  met.py  opt.py  trainer.py
rlmc/tutorial/c_packages/cython_test/: examples_cy.pyx  main.py  setup.py
rlmc/tutorial/loop/: numpyloop.py
rlmc/tutorial/transformer_onlytutorial_notuse/: __init__.py  datasets.py  main.py  test.py  transformer.py
rlmc/utils/: agents.py  agents_coroutine.py  assistant.py  assistant_v1.py  assistant_v2.py  asynctask.py  camera.py  coroutine.py  del_jupyter_temp.py  downloadscript.py  gittool.py  instructions.py  live.py  logger.py  login_module.py  mc.py  mic.py  multiprocess.py  multithread.py  register.py  screengrab.py  spider.py  sudict.py  systeminfos.py
rlmc/visualization/: __init__.py
rltests/: call_qianfan.py  cut_video.py  del_jupyter_temp.c  del_jupyter_temp.py  download_model.py  gen_hash.py  handcontrol.py  moviepy_cut_video.py  ocr.py  stt.py  take_photo.py  tem.py  test.py  test_rlmc.py  test_tmp.py
rltools/: asr.py  asr_media.py  asr_speaker_diarization.py  asr_teochew.py  asr_teochew_rt.py  asr_turbo.py  call_qianfan.py  clear_cache.py  cuda_test.py  cut_video.py  del_jupyter_temp.c  del_jupyter_temp.cp312-win_amd64.pyd  del_jupyter_temp.pyx  download_model.py  downloadscript_no.py  findtool.py  gen_hash.py  handcontrol.py  image_coordinates.py  image_registration.py  isi.py  live.py  manage_source.py  moviepy_cut_video.py  ocr.py  post.py  screen_coordinates.py  speaker_diarization.py  stt.py  stt_turbo.py  systeminfos.py  tsi.py  tts.py
